infra/k3s/base/apps/minio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`minio.localhost`)
      kind: Rule
      services:
        - name: minio
          port: 9001
